# Traffic

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
core/: simulateur.py
models/: reseau.py  route.py  vehicule.py
