[project]
name = "traffic"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed5827",email = "ssjzchebbi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alabaster (==1.0.0)",
    "anyio (==4.11.0)",
    "babel (==2.17.0)",
    "certifi (==2025.10.5)",
    "charset-normalizer (==3.4.3)",
    "click (==8.3.0)",
    "colorama (==0.4.6)",
    "docutils (==0.21.2)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "imagesize (==1.4.1)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "packaging (==25.0)",
    "pygments (==2.19.2)",
    "requests (==2.32.5)",
    "roman-numerals-py (==3.1.0)",
    "sniffio (==1.3.1)",
    "snowballstemmer (==3.0.1)",
    "sphinx (==8.2.3)",
    "sphinx-autobuild (==2025.8.25)",
    "sphinx-rtd-theme (==3.0.2)",
    "sphinxcontrib-applehelp (==2.0.0)",
    "sphinxcontrib-devhelp (==2.0.0)",
    "sphinxcontrib-htmlhelp (==2.1.0)",
    "sphinxcontrib-jquery (==4.1)",
    "sphinxcontrib-jsmath (==1.0.1)",
    "sphinxcontrib-qthelp (==2.0.0)",
    "sphinxcontrib-serializinghtml (==2.0.0)",
    "starlette (==0.48.0)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.37.0)",
    "watchfiles (==1.1.0)",
    "websockets (==15.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
pythonpath = ["."]

